# feeds

./: .gitignore  .python-version  CLAUDE.md  Dockerfile  README.md  app_build.cmd  app_shell.cmd  app_start_prod.cmd  bash.cmd  build-and-push.cmd  build.cmd  cmd-build-and-push.bsh  cmd-build-and-push.cmd  cmd-build.bsh  cmd-build.cmd  cmd-push.bsh  cmd-server.cmd  compose.yml  conftest.py  generate_blog_posts.py  push.cmd  pyproject.toml  requirements-nix.txt  requirements-win.txt  requirements.in  run-in-bash.bsh  run-in-bash.cmd  test_blog_post_item.py  test_cli.py  test_csv_parsing.py  test_generate_blog_posts.py  test_processing.py  test_utilities.py
.claude/: settings.local.json
