[project]
name = "feeds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.31.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "mockito>=1.5.4",
    "pytest>=8.4.1",
]
